# Cedar

./: .gitignore  Cargo.toml  ENHANCED_RESEARCH_INITIALIZATION.md  ENHANCED_VARIABLE_DETECTION.md  ICON_UPDATE_SUMMARY.md  MENU_BAR_ICON_FIX.md  README.md  SETUP.md  STRICT_API_KEY_REQUIREMENT.md  TESTING.md  build-with-tests.sh  capture-logs.sh  integration_test.rs  log-capture.sh  test-api-key-fix.js  test-cedar.sh  test-data-management.js  test-enhanced-execution.js  test-intelligent-steps.js  test-question-generation.js  test-research-initialization.js  test-session-persistence.js  test-write-up-generation.js  test_all_file_types.rs  test_file_analyzer.rs
Tests/: Cargo.toml  TEST_RESULTS.md  comprehensive_backend_test.rs  data_analysis_test.rs  real_backend_test.rs  run_all_tests.sh  run_tests.sh
Unit Tests/: README.md  run-all-tests.js  test-academic-research-initialization.js  test-categorization-system.js  test-cedar.sh  test-library-detection.js  test-research-plan-system.js  test-variable-detection.js
cedar-core/: Cargo.toml
cedar-core/src/: agent.rs  cell.rs  code_preprocessor.rs  context.rs  deps.rs  executor.rs  file_analyzer.rs  lib.rs  llm.rs  main.rs  notebooks.rs  output_parser.rs  publication.rs  research.rs  session.rs  storage.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-api-fix.js  test-integrated-workflow.js  test-placeholder-mode.js  test-research.js  test-upload-debug.js  vite.config.ts
manifests/: gaia_outer_disk.json
notebooks/: calculate_the_mean_of_numbers_1__2__3__4__5.json  dev_run.json  find_the_top_3_product_categories_associated_with_churn.json  sample.json  what_is_the_length_of_a_day_on_earth_if_we_were_20__closer_to_the_sun_.json  what_would_the_length_of_a_year_be_if_earth_were_20__closer_to_the_sun_.json
papers/: test_paper.json  test_paper.md
prompts/: plan.txt
reference/: ANALYSIS_CELL_PERSISTENCE_SOLUTION.md  API_KEY_SOLUTION.md  AUTOMATIC_LIBRARY_DETECTION.md  AUTOMATIC_WRITE_UP_GENERATION.md  DATA_DRIVEN_RESEARCH_WORKFLOW.md  DATA_MANAGEMENT_SYSTEM.md  ENHANCED_EXECUTION_FEATURES.md  EXCEL_FILE_UPLOAD_IMPLEMENTATION.md  ICON_UPDATE_SUMMARY.md  INTEGRATED_FILE_ANALYSIS_FLOW.md  INTELLIGENT_STEP_GENERATION.md  LLM_OUTPUT_CATEGORIZATION.md  PRODUCT_FEATURES_TESTING.md  README.md  RESEARCH_PLAN_SYSTEM.md  RUST_FILE_ANALYZER_IMPLEMENTATION.md  SCROLLING_FIXES.md  SESSION_PERSISTENCE_IMPLEMENTATION.md  STRICT_API_KEY_REQUIREMENT.md  TAURI_README.md  VISUALIZATION_SYSTEM.md
src-tauri/: Cargo.toml  tauri.conf.json
(+39 files in other folders)
