[package]
name = "cedar-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data_analysis_test"
path = "data_analysis_test.rs"

[[bin]]
name = "real_backend_test"
path = "real_backend_test.rs"

[[bin]]
name = "comprehensive_backend_test"
path = "comprehensive_backend_test.rs"

[dependencies]
cedar-core = { path = "../cedar-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] } 