[package]
name = "cedar-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
regex = "1.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
dirs = "5.0"
# duckdb = { version = "0.9", features = ["bundled"] }

[lib]
name = "cedar"
path = "src/lib.rs"

[[bin]]
name = "dev"
path = "src/bin/dev.rs"

[[bin]]
name = "storage_test"
path = "src/bin/storage_test.rs"

[[bin]]
name = "research"
path = "src/bin/research.rs"

[[bin]]
name = "test_session"
path = "src/bin/test_session.rs"

[[bin]]
name = "test_publication"
path = "src/bin/test_publication.rs"